# photostats

./: Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  oranda.json  photostats-installer.ps1.txt  photostats-installer.sh.txt
.github/workflows/: web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.2.0/: index.html
changelog/v0.3.0/: index.html
src/: main.rs
wix/: main.wxs
